# readycorpuschristi

./: .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  SETUP.md  app.py  cameras_data.json  conversation_history.json  pyproject.toml  requirements-prod.txt  requirements.txt  tatus  vercel.json
.github/workflows/: python.yml
api/: index.py  vercel.py
docs/: API.md  DEPLOYMENT.md
logs/: admin_log.json  admin_log.json.backup
routes/: __init__.py  admin.py  cameras.py  chatbot.py  evacuation_routes.py  flood_zones.py  hotels.py  map_data.py  news.py  traffic.py  warnings.py  weather.py
scripts/: adjust_zone_position.py  analyze_zone_images.py  create_dummy_warnings.py  detect_zone_perimeters.py  fix_zone_bounds.py  init_flood_zones.py  process_zone_bounds.py  scale_zones.py
services/: __init__.py  admin_log_service.py  camera_service.py  chatbot_service.py  conversation_history_service.py  evacuation_routes_service.py  flood_zone_service.py  hotel_service.py  map_service.py  news_service.py  pdf_generator.py  prompt_sandbox.py  safety_evaluation_template.py  traffic_service.py  warning_service.py  weather_service.py
static/css/: mobile.css  style.css
static/js/: app.js  camera-loader.js  chatbot.js  evacuation-routes.js  flood-zone-manager.js  hotel-search.js  map.js  mobile-chatbot.js  mobile-news.js  mobile.js  news-ticker.js  pdf-viewer.js  safety-popup.js  traffic-layer.js  visibility-menu.js  warning-loader.js  warning-popup.js
templates/: admin.html  index.html  mobile.html
test_vercel/: README.md  app.py
test_vercel/api/: index.py
